--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "@clerk/localizations": "^3.0.4",
     "@clerk/nextjs": "^5.1.5",
     "@headlessui/react": "^1.7.15",
-    "@next/bundle-analyzer": "^12.1.1",
+    "@next/bundle-analyzer": "^15.3.4",
     "@vercel/analytics": "^1.0.0",
     "algoliasearch": "^4.18.0",
     "axios": "^1.7.2",
     "feed": "^4.2.2",
     "ioredis": "^5.4.2",
     "js-md5": "^0.7.3",
+    "lodash": "^4.17.21",
     "lodash.throttle": "^4.1.1",
     "memory-cache": "^0.2.0",
     "next": "14.2.4",
